# RayTracing

./: .clang-format  .gitignore  README.md
src/: CMakeLists.txt  main.cpp  make_gif.py
src/geometry3D/line/: line.cpp  line.h
src/geometry3D/point/: point.cpp  point.h
src/geometry3D/safeDouble/: safeDouble.cpp  safeDouble.h
src/geometry3D/safe_double/: safe_double.h
src/geometry3D/vector/: vector.cpp  vector.h
src/ray_tracing_lib/: CMakeLists.txt  all.h  angle.cpp  angle.h  camera.cpp  camera.h  common.h  edge.cpp  edge.h  figure.h  line.cpp  line.h  object.h  plane.cpp  plane.h  point.cpp  point.h  polygon.cpp  polygon.h  polyhedron.cpp  polyhedron.h  ray.cpp  ray.h  safe_double.cpp  safe_double.h  vector.cpp  vector.h
src/ray_tracing_lib/line/: line.cpp  line.h
src/ray_tracing_lib/plane/: plane.cpp  plane.h
src/ray_tracing_lib/point/: point.cpp  point.h
src/ray_tracing_lib/safe_double/: safe_double.cpp  safe_double.h
src/ray_tracing_lib/vector/: vector.cpp  vector.h
src/tests/: CMakeLists.txt  edge.cpp  line.cpp  plane.cpp  point.cpp  polygon.cpp  polyhedron.cpp  ray.cpp  safe_double.cpp  tests.cpp  tests_line.cpp  tests_plane.cpp  tests_point.cpp  tests_polygon.cpp  tests_safe_double.cpp  tests_vector.cpp  vector.cpp
tests/: CMakeLists.txt  test.cpp  tests.cpp
